--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react-hook-form": "^7.41.1",
     "react-router-dom": "^6.5.0",
     "react-scripts": "^2.1.3",
+    "react-to-print": "^2.14.10",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
